[project]
name = "tronshow2024"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.1.3",
    "duckdb-engine>=0.13.6",
    "gtfs-realtime-bindings>=1.0.0",
    "ipykernel>=6.29.5",
    "jupysql>=0.10.16",
    "jupyter>=1.1.1",
    "pandas>=2.2.3",
    "pyarrow>=18.1.0",
]
